# grim_rust

./: .gitignore  Cargo.toml  README.md  grim_mod  shell.nix  wip  wip.md  wip_state.json
docs/: grim_engine_lua_host.md  grim_viewer_modules.md  live_streaming_pipeline.md  runtime_smoke_tests.md  startup_overview.md
grim_analysis/: Cargo.toml  README.md
grim_analysis/retail_capture/: README.md  telemetry.lua
grim_analysis/retail_capture/shim/: Makefile  lua_hook.c
grim_analysis/src/: boot.rs  coverage.rs  hook_names.rs  lib.rs  main.rs  registry.rs  report.rs  resources.rs  runtime.rs  simulation.rs  state_catalog.rs  timeline.rs
grim_engine/: Cargo.toml  README.md
grim_engine/src/: analysis.rs  assets.rs  audio_bridge.rs  cli.rs  codec3_depth.rs  geometry_diff.rs  geometry_snapshot.rs  lab_collection.rs  lua_host.rs  main.rs  runtime.rs  scheduler.rs  state.rs  stream.rs
grim_engine/src/lua_host/: context.rs  hotspot.rs  mod.rs  movement.rs  state_update.rs  types.rs
grim_engine/src/lua_host/context/: achievements.rs  actors.rs  audio.rs  bindings.rs  cutscenes.rs  geometry.rs  geometry_export.rs  inventory.rs  menus.rs  movement.rs  objects.rs  pause.rs  scripts.rs  sets.rs
grim_engine/src/lua_host/context/actors/: runtime.rs
grim_engine/tests/: hotspot_demo.rs  movement_regression.rs  runtime_regression.rs
grim_engine/tests/fixtures/: movement_demo_log.json  scheduler_manifest_mo.json  timeline_manifest_mo.json
grim_formats/: Cargo.toml  README.md
grim_formats/examples/: blocky16_dump.rs  snm_info.rs  zbm_stats.rs
grim_formats/src/: blocky16.rs  bm.rs  cos.rs  lab.rs  lib.rs  set.rs  snm.rs  three_do.rs
grim_stream/: Cargo.toml
grim_stream/src/: lib.rs
grim_viewer/: Cargo.toml  README.md
grim_viewer/presets/: manny_office_layout.json
grim_viewer/src/: audio.rs  audio_log.rs  cli.rs  display.rs  layout.rs  live_scene.rs  live_stream.rs  main.rs  movie.rs  overlay.rs  scene.rs  texture.rs  timeline.rs  ui_layout.rs  viewer.rs
grim_viewer/src/movie/: catalog.rs  mod.rs  playback.rs  yuv.rs
grim_viewer/src/scene/: README.md  manny.rs  mod.rs  movement.rs  orientation.rs  viewer_scene.rs
grim_viewer/src/viewer/: debug.rs  markers.rs  mesh.rs  mod.rs  overlays.rs  shaders.rs
grim_viewer/src/viewer/state/: README.md  init.rs  layout.rs  mod.rs  overlay_updates.rs  panels.rs  render.rs  selection.rs
telemetry/: telemetry.lua
tools/: commit_template.txt  dump_coverage.sh  format_commit.py  grim_viewer.py  install_git_hooks.sh  lint_commit.py  run_dev_install.sh  run_live_preview.py  run_lua3.c  run_manny_boot.sh  run_movie_debug.py  sync_assets.sh  wip_summary.py
tools/git_hooks/: commit-msg
tools/live_retail_capture/: Cargo.toml
tools/live_retail_capture/src/: main.rs
tools/tests/: hotspot_audio.json  hotspot_events.json  manny_office_depth_stats.json  manny_office_timeline.json  movement_log.json
