[package]
name = "grim_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
grim_analysis = { path = "../grim_analysis" }
grim_formats = { path = "../grim_formats" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mlua = { version = "0.9", features = ["lua51", "vendored"] }
