[package]
name = "grim_formats"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
