[package]
name = "grim_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
grim_stream = { path = "../grim_stream" }
pollster = "0.3"
wgpu = { version = "0.20", features = ["wgsl"] }
winit = { version = "0.29", features = ["x11", "wayland"] }
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1"
