[package]
name = "grim_viewer"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
grim_stream = { path = "../grim_stream" }
pollster = "0.3"
wgpu = { version = "0.20", features = ["wgsl"] }
winit = { version = "0.29", features = ["x11", "wayland"] }
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1"
fontdue = "0.8"
once_cell = "1"
crossbeam-channel = "0.5"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
url = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
